fixed: #3 "State got lost on language change"

--- a/tsconfig.commonjs.json
+++ b/tsconfig.commonjs.json
@@ -17,7 +17,7 @@
     "node_modules",
     "src/vite.ts",
     "src/mix.ts",
-    "src/loader.ts",
+    "src/loader.ts"
   ],
   "rules": {
     "no-console": false
