--- a/tsconfig.plugins.json
+++ b/tsconfig.plugins.json
@@ -18,7 +18,7 @@
   "include": [
     "src/vite.ts",
     "src/mix.ts",
-    "src/loader.ts",
+    "src/loader.ts"
   ],
   "rules": {
     "no-console": false
