--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "node_modules",
     "src/vite.ts",
     "src/mix.ts",
-    "src/loader.ts",
+    "src/loader.ts"
   ],
   "rules": {
     "no-console": false
