--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "laravel-react-i18n",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "author": {
-    "name": "Evgeniy Meles",
-    "email": "meles@yandex.ru"
+    "name": "Eugene Meles",
+    "email": "xmelesx@gmail.com"
   },
   "keywords": [
+    "vite-plugin",
+    "vite-plugin-laravel",
     "laravel",
     "react",
     "i18n",
@@ -14,52 +16,46 @@
   "repository": "https://github.com/EugeneMeles/laravel-react-i18n",
   "license": "MIT",
   "description": "Allows to connect your `Laravel` Framework localization files with `React`.",
-  "main": "dist/cjs/index.js",
-  "module": "dist/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "watch": "tsc --watch",
     "test": "jest",
-    "coverage": "jest --coverage",
-    "lint": "prettier -c \"src/**/*.(tsx|ts|js)\" --write",
-    "build:plugins": "tsc -p tsconfig.plugins.json",
-    "build:client": "tsc -p tsconfig.json",
-    "build:cjs": "tsc -p tsconfig.commonjs.json && babel dist/cjs/utils/has-php-translations.js --out-file dist/cjs/utils/has-php-translations.js",
-    "build": "npm run build:plugins && npm run build:client && npm run build:cjs",
-    "prepare": "npm run build",
+    "prettier": "prettier -c \"src/**/*.(ts|tsx)\" --write",
+    "build": "npm run build:client && npm run build:commonjs && npm run build:plugin",
+    "build:client": "tsc -p tsconfig.client.json",
+    "build:commonjs": "tsc -p tsconfig.commonjs.json",
+    "build:plugin": "tsc -p tsconfig.plugin.json",
     "postpublish": "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.10",
-    "@babel/core": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.5",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@types/jest": "^28.1.6",
-    "@types/react": "^18.0.16",
-    "babel-jest": "^28.1.3",
-    "babel-plugin-transform-vite-meta-env": "^1.0.3",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "prettier": "^2.7.1",
-    "source-map": "^0.7.4",
-    "ts-jest": "^28.0.7",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4"
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^18.16.8",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.5"
   },
   "dependencies": {
-    "php-parser": "3.1.0-beta.4",
+    "php-array-reader": "^1.3.5",
     "react": "^18.2.0"
-  },
-  "peerDependencies": {
-    "laravel-mix": "^6.0.49"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "prettier --parser=typescript --write"
-    ],
-    "*.js": [
-      "prettier --parser=javascript --write"
-    ]
   }
 }
