--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "i18n",
     "inertiajs"
   ],
+  "engines" : { 
+    "npm" : ">=9.0.0",
+    "node" : ">=16.0.0"
+  }
   "repository": "https://github.com/EugeneMeles/laravel-react-i18n",
   "license": "MIT",
   "description": "Allows to connect your `Laravel` Framework localization files with `React`.",
