--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-react-i18n",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "author": {
     "name": "Eugene Meles",
     "email": "xmelesx@gmail.com"
@@ -20,9 +20,9 @@
   "repository": "https://github.com/EugeneMeles/laravel-react-i18n",
   "license": "MIT",
   "description": "Allows to connect your `Laravel` Framework localization files with `React`.",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
     "prettier": "prettier -c \"src/**/*.(ts|tsx)\" --write",
