--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/no-shadow": "off",
     "consistent-return": "off",
     "import/no-extraneous-dependencies": "off",
     "import/prefer-default-export": "off",
